--- a/reference/ins_api/paths/user-filters-v2-filters-id-PATCH.yaml
+++ b/reference/ins_api/paths/user-filters-v2-filters-id-PATCH.yaml
@@ -70,6 +70,17 @@ responses:
             details: Incorrect user token
           items:
             $ref: '#/components/schemas/Error'
+  '429':
+    description: Too Many Requests
+    content:
+      application/json:
+        schema:
+          example:
+            error: Too Many Requests
+            details: You have specified too many filter items. Your limit items of
+              filter is 100.
+          items:
+            $ref: '#/components/schemas/Error'
 description: |-
   Modyfikuje filtr o podanym `id`.
 
