--- a/reference/common/schemas/content-filters-model.yaml
+++ b/reference/common/schemas/content-filters-model.yaml
@@ -42,6 +42,7 @@ properties:
     type: array
     items:
       type: string
+    description: Lista osób, których dotyczą obweiszczenia (`imię nazwisko`)
 example:
   nip:
   - '7272849598'
