--- a/reference/common/schemas/update-params-model.yaml
+++ b/reference/common/schemas/update-params-model.yaml
@@ -77,6 +77,10 @@ properties:
     title: Api Requests Used
     type: integer
     description: Liczba wykonanych zapytań do API o pojedyncze ogłoszenia
+  monthly_reset_limits:
+    title: Monthly Reset Limits
+    type: boolean
+    description: Miesięczny reset limitów
   monitors_emails_limit:
     title: Monitors Emails Limit
     type: integer
@@ -257,6 +261,7 @@ example:
   api_key: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
   api_requests_available: 1000
   api_requests_used: 100
+  monthly_reset_limits: true
   panel_users_limit: 5
   panel_users:
   - abc@def.pl
