Documentation for file encoding

--- a/reference/common/schemas/create-report-model.yaml
+++ b/reference/common/schemas/create-report-model.yaml
@@ -277,23 +277,22 @@ properties:
     type: string
     description: Hasło do pliku raportu
   file_encoding:
-    title: File Encoding
-    enum:
-    - utf-8
-    - cp1250
-    - iso-8859-2
-    type: string
-    default: utf-8
-    description: |-
-      Typ kodowania znaków w raporcie.
-      <details>
-      <summary>Pokaż możliwe opcje</summary>
+    allOf:
+    - title: Encoding
+      enum:
+      - 0
+      - 1
+      - 2
+      type: integer
+      description: |-
+        System kodowania znaków w pliku<details><summary>Pokaż możliwe opcje</summary>
 
-      | Wartość |
-      |-|
-      | `utf-8` |
-      | `cp1250` |
-      | `iso-8859-2` |</details>
+        | Wartość | Nazwa  |
+        |-|-|
+        | `0` | utf-8 |
+        | `1` | cp1250 |
+        | `2` | iso-8859-2 |</details>
+    default: 0
 additionalProperties: false
 example:
   type: 0
@@ -302,10 +301,10 @@ example:
     custom_categories:
     - K
     from_date: '2021-11-02'
-    append_first_entry: true
     to_date: '2021-11-04'
-    filter_id: 61ded2f8aff2de52365d891e
+    filter_id: 639740d14a61d5fa007707c1
+    append_first_entry: true
   custom_content: []
   file_format: 3
   file_password: mgbi2021
-  file_encoding: utf-8
+  file_encoding: 0
