--- a/reference/krs_rdf/paths/financial-data-GET.yaml
+++ b/reference/krs_rdf/paths/financial-data-GET.yaml
@@ -703,48 +703,57 @@ responses:
               pala_oac_maec_cfy:
                 type: string
                 pattern: \d+\.\d{2}
+                example: '10362941097.49'
                 description: Zużycie materiałów i energii - kwota na dzień kończący
                   bieżący rok obrotowy
               pala_oac_maec_pfy:
                 type: string
                 pattern: \d+\.\d{2}
+                example: '10362941097.49'
                 description: Zużycie materiałów i energii - kwota na dzień kończący
                   poprzedni rok obrotowy
               pala_oac_maec_cpfy:
                 type: string
                 pattern: \d+\.\d{2}
+                example: '10362941097.49'
                 description: Zużycie materiałów i energii - przekształcone dane porównawcze
                   za poprzedni rok obrotowy
               pala_oac_ocbt_cfy:
                 type: string
                 pattern: \d+\.\d{2}
+                example: '10362941097.49'
                 description: Pozostałe koszty rodzajowe - kwota na dzień kończący
                   bieżący rok obrotowy
               pala_oac_ocbt_pfy:
                 type: string
                 pattern: \d+\.\d{2}
+                example: '10362941097.49'
                 description: Pozostałe koszty rodzajowe - kwota na dzień kończący
                   poprzedni rok obrotowy
               pala_oac_ocbt_cpfy:
                 type: string
                 pattern: \d+\.\d{2}
+                example: '10362941097.49'
                 description: Pozostałe koszty rodzajowe - przekształcone dane porównawcze
                   za poprzedni rok obrotowy
               en_sotdbttboitatgfr_it_cfy:
                 type: string
                 pattern: \d+\.\d{2}
+                example: '10362941097.49'
                 description: Podatek dochodowy przy rozliczeniu różnicy pomiędzy podstawą
                   opodatkowania podatkiem dochodowym a wynikiem finansowym (zyskiem,
                   stratą) brutto - kwota na dzień kończący bieżący rok obrotowy
               en_sotdbttboitatgfr_it_pfy:
                 type: string
                 pattern: \d+\.\d{2}
+                example: '10362941097.49'
                 description: Podatek dochodowy przy rozliczeniu różnicy pomiędzy podstawą
                   opodatkowania podatkiem dochodowym a wynikiem finansowym (zyskiem,
                   stratą) brutto - kwota na dzień kończący poprzedni rok obrotowy
               en_sotdbttboitatgfr_it_cpfy:
                 type: string
                 pattern: \d+\.\d{2}
+                example: '10362941097.49'
                 description: Podatek dochodowy przy rozliczeniu różnicy pomiędzy podstawą
                   opodatkowania podatkiem dochodowym a wynikiem finansowym (zyskiem,
                   stratą) brutto - przekształcone dane porównawcze za poprzedni rok
