--- a/reference/common/schemas/d-bparams-model.yaml
+++ b/reference/common/schemas/d-bparams-model.yaml
@@ -58,6 +58,7 @@ properties:
     - entity.info.ownership_type
     - entity.info.primary_business
     - entity.info.commencement_date
+    - entity.info.birth_date
     - entity.numbers.nip
     - entity.numbers.regon
     - entity.numbers.krs
@@ -263,6 +264,7 @@ example:
   - entity.info.ownership_type
   - entity.info.primary_business
   - entity.info.commencement_date
+  - entity.info.birth_date
   - entity.numbers.nip
   - entity.numbers.regon
   - entity.numbers.krs
