--- a/reference/common/schemas/params-model.yaml
+++ b/reference/common/schemas/params-model.yaml
@@ -79,6 +79,7 @@ properties:
       - entity.info.ownership_type
       - entity.info.primary_business
       - entity.info.commencement_date
+      - entity.info.birth_date
       - entity.numbers.nip
       - entity.numbers.regon
       - entity.numbers.krs
@@ -137,6 +138,7 @@ properties:
       | `entity.info.ownership_type` | Forma własności |
       | `entity.info.primary_business` | Przeważająca działalność gospodarcza (kod PKD) |
       | `entity.info.commencement_date` | Data rozpoczęcia działalności |
+      | `entity.info.birth_date` | Data urodzenia |
       | `entity.numbers.nip` | NIP |
       | `entity.numbers.regon` | REGON |
       | `entity.numbers.krs` | KRS |
@@ -342,6 +344,7 @@ example:
   - entity.info.ownership_type
   - entity.info.primary_business
   - entity.info.commencement_date
+  - entity.info.birth_date
   - entity.numbers.nip
   - entity.numbers.regon
   - entity.numbers.krs
