--- a/reference/common/schemas/monitor-model.yaml
+++ b/reference/common/schemas/monitor-model.yaml
@@ -82,6 +82,9 @@ properties:
     example: true
     description: Czy wysyłać powiadomienie, jeśli nie pojawiły się nowe ogłoszenia
       w ramach monitoringu?
+  show_snippets:
+    title: Show Snippets
+    type: boolean
 example:
   id: 6221c40c843d0d773f37cd4b
   filter_id: 6221c40cdeb9dcdccf37cd4c
@@ -90,6 +93,7 @@ example:
   - def@mgbi.pl
   append_first_entry: false
   send_empty_notification: true
+  show_snippets: true
   creation_datetime: '2022-03-02T08:47:24.769095+01:00'
   last_update_datetime: '2022-03-04T06:47:24.769118+01:00'
   notifications:
