--- a/reference/common/schemas/update-monitors-model.yaml
+++ b/reference/common/schemas/update-monitors-model.yaml
@@ -27,9 +27,13 @@ properties:
     example: true
     description: Czy wysyłać powiadomienie, jeśli nie pojawiły się nowe ogłoszenia
       w ramach monitoringu?
+  show_snippets:
+    title: Show Snippets
+    type: boolean
 example:
   filter_id: 6221c40c843d0d773f37cd4b
   emails:
   - kura@wp.pl
   append_first_entry: false
   send_empty_notifications: false
+  show_snippets: true
