feat: added: x-vendor-authorization, update_id_from, update_id_to and removed wrong phrase in announcements

--- a/reference/common/schemas/d-bparams-model.yaml
+++ b/reference/common/schemas/d-bparams-model.yaml
@@ -246,6 +246,11 @@ properties:
     - K.2
     - M.0
     - M.1
+  authorized_vendors:
+    title: Authorized Vendors
+    type: array
+    items: {}
+    default: []
 example:
   archive_date_from: '2021-04-23'
   current_reports_available: 25
@@ -328,3 +333,4 @@ example:
   - K.2
   - M.0
   - M.1
+  authorized_vendors: []
