--- a/reference/ins_api/paths/announcements-v2-announcements-GET.yaml
+++ b/reference/ins_api/paths/announcements-v2-announcements-GET.yaml
@@ -235,6 +235,22 @@ parameters:
   description: Umożliwia odpytywanie bazy o ogłoszenia ze wskazanej aktualizacji
 - required: false
   schema:
+    title: Update Id From
+    type: integer
+  name: update_id_from
+  in: query
+  description: Umożliwia odpytywanie bazy o ogłoszenia z update_id większym od podanej
+    wartości
+- required: false
+  schema:
+    title: Update Id To
+    type: integer
+  name: update_id_to
+  in: query
+  description: Umożliwia odpytywanie bazy o ogłoszenia z update_id mniejszym od podanej
+    wartości
+- required: false
+  schema:
     title: First Update Id
     type: integer
   name: first_update_id
@@ -248,6 +264,13 @@ parameters:
   name: Authorization
   in: header
   description: Klucz autoryzacji
+- required: false
+  schema:
+    title: X-Vendor-Authorization
+    type: string
+  example: imsig-55086cef9c87d6d031cd5db29cd03a2ed0252b45
+  name: X-Vendor-Authorization
+  in: header
 responses:
   '200':
     description: Wynik wyszukiwania ogłoszeń
@@ -323,8 +346,7 @@ description: |-
   według daty publikacji w MSiG / KRZ.
 
   W przypadku, gdy żadne ogłoszenie nie spełnia podanych kryteriów,
-  zwracana jest pusta lista. W przypadku, gdy liczba ogłoszeń spełniających
-  kryteria jest większa niż 1 000, lista zawiera 1 000 pierwszych ogłoszeń.
+  zwracana jest pusta lista.
 
   Zapytanie może zostać wykonane, gdy całkowita liczba zapytań po jego wykonaniu
   nie będzie przekraczać wartości `api_requests_used` z parametrów usługi.
