--- a/reference/common/schemas/params-admin-model.yaml
+++ b/reference/common/schemas/params-admin-model.yaml
@@ -1,4 +1,4 @@
-title: ParamsModel
+title: ParamsAdminModel
 required:
 - archive_date_from
 - current_reports_available
@@ -22,51 +22,37 @@ required:
 - panel_users
 - monitors_filter_required
 - available_categories
+- authorized_vendors
 type: object
 properties:
   archive_date_from:
     title: Archive Date From
     type: string
     format: date
-    description: Data początkowa okresu, z którego użytkownik może pobierać ogłoszenia
-      w ramach raportów aktualnych
   current_reports_available:
     title: Current Reports Available
     type: integer
-    description: Maksymalna liczba raportów aktualnych, które użytkownik może utorzyć
-      w ramach obecnego planu
   current_reports_used:
     title: Current Reports Used
     type: integer
-    description: Liczba utworzonych raportów aktualnych
   current_reports_filter_required:
     title: Current Reports Filter Required
     type: boolean
-    description: Czy przy tworzeniu raportu aktualnego użytkownik musi wybrać filtr?
   archival_reports_available:
     title: Archival Reports Available
     type: integer
-    description: Maksymalna liczba raportów archiwalnych, które użytkownik może utorzyć
-      w ramach obecnego planu
   archival_reports_used:
     title: Archival Reports Used
     type: integer
-    description: Liczba utworzonych raportów archiwalnych
   archival_reports_filter_required:
     title: Archival Reports Filter Required
     type: boolean
-    description: Czy przy tworzeniu raportu aktualnego użytkownik musi wybrać filtr?
   credits_available:
     title: Credits Available
     type: integer
-    description: Maksymalna liczba identyfikatorów, o które użytkownik może odpytać
-      API w zapytaniu o ogłoszenia z całego archiwum (od 1.01.2021) albo których może
-      użyć w filtrze dla raportu archiwalnego w ramach obecnego planu
   credits_used:
     title: Credits Used
     type: integer
-    description: Liczba identyfikatorów, o które użytkownik odpytał API albo których
-      użył w filtrze dla raportu archiwalnego
   available_content:
     type: array
     items:
@@ -125,114 +111,100 @@ properties:
       - content.html
       - content.url
       type: string
-    description: |-
-      Lista identyfikatorów pół, które użytkownik może uwzględnić w raportach
-      <details><summary>Pokaż możliwe opcje</summary>
+      description: |-
+        <details><summary>Pokaż możliwe opcje</summary>
 
-      | Wartość | Nazwa  |
-      |-|-|
-      | `entity.info.cleaned_name` | Nazwa podmiotu |
-      | `entity.info.first_name` | Imię |
-      | `entity.info.last_name` | Nazwisko |
-      | `entity.info.legal_form` | Forma prawna |
-      | `entity.info.ownership_type` | Forma własności |
-      | `entity.info.primary_business` | Przeważająca działalność gospodarcza (kod PKD) |
-      | `entity.info.commencement_date` | Data rozpoczęcia działalności |
-      | `entity.info.birth_date` | Data urodzenia |
-      | `entity.numbers.nip` | NIP |
-      | `entity.numbers.regon` | REGON |
-      | `entity.numbers.krs` | KRS |
-      | `entity.numbers.pesel` | PESEL |
-      | `entity.address.state` | Województwo |
-      | `entity.address.powiat` | Powiat |
-      | `entity.address.gmina` | Gmina |
-      | `entity.address.town` | Miejscowość |
-      | `entity.address.street` | Ulica |
-      | `entity.address.house_number` | Numer nieruchomości |
-      | `entity.address.flat_number` | Numer lokalu |
-      | `entity.address.zip_code` | Kod pocztowy |
-      | `entity.address.post_office` | Poczta |
-      | `proceeding.court_name` | Nazwa sądu |
-      | `proceeding.court_department` | Nazwa wydziału |
-      | `proceeding.signatures` | Sygnatura sprawy |
-      | `proceeding.commissioner_name` | Sędzia komisarz |
-      | `proceeding.commissioner_deputy_name` | Zastępca sędziego komisarza |
-      | `proceeding.administrator_name` | Nadzorca w postępowaniu |
-      | `proceeding.administrator_function` | Funkcja nadzorcy |
-      | `proceeding.administrator_licence_number` | Numer licencji doradcy restrukturyzacyjnego |
-      | `proceeding.administrator_address` | Adres nadzorcy (ulica) |
-      | `proceeding.administrator_zip_code` | Adres nadzorcy (kod pocztowy) |
-      | `proceeding.administrator_town` | Adres nadzorcy (miejscowość) |
-      | `proceeding.administrator_source_url` | Źródło danych nadzorcy |
-      | `order.order_date` | Data wydania postanowienia |
-      | `order.expiration_period` | Okres do działania (w dniach) |
-      | `order.expiration_date` | Koniec okresu do działania |
-      | `msig_entry.chapter` | Rozdział MSiG |
-      | `msig_entry.section` | Sekcja MSiG |
-      | `msig_entry.signature` | Sygnatura ogłoszenia w MSiG |
-      | `msig_entry.issue_date` | Data publikacji ogłoszenia w MSiG |
-      | `msig_entry.yearly_number` | Numer wydania MSiG |
-      | `msig_entry.position_number` | Numer pozycji MSiG |
-      | `msig_entry.url` | Link do ogłoszenia w serwisie imsig.pl |
-      | `krz_entry.chapter` | Rozdział KRZ |
-      | `krz_entry.section` | Sekcja KRZ |
-      | `krz_entry.subsection` | Podsekcja KRZ |
-      | `krz_entry.signature` | Sygnatura ogłoszenia w KRZ |
-      | `krz_entry.issue_date` | Data publikacji ogłoszenia w KRZ |
-      | `krz_entry.url` | Link do ogłoszenia w serwisie KRZ |
-      | `content.text` | Treść ogłoszenia (tekst) |
-      | `content.html` | Treść ogłoszenia (HTML) |
-      | `content.url` | Link do podglądu treści ogłoszenia |</details>
+        | Wartość | Nazwa  |
+        |-|-|
+        | `entity.info.cleaned_name` | Nazwa podmiotu |
+        | `entity.info.first_name` | Imię |
+        | `entity.info.last_name` | Nazwisko |
+        | `entity.info.legal_form` | Forma prawna |
+        | `entity.info.ownership_type` | Forma własności |
+        | `entity.info.primary_business` | Przeważająca działalność gospodarcza (kod PKD) |
+        | `entity.info.commencement_date` | Data rozpoczęcia działalności |
+        | `entity.info.birth_date` | Data urodzenia |
+        | `entity.numbers.nip` | NIP |
+        | `entity.numbers.regon` | REGON |
+        | `entity.numbers.krs` | KRS |
+        | `entity.numbers.pesel` | PESEL |
+        | `entity.address.state` | Województwo |
+        | `entity.address.powiat` | Powiat |
+        | `entity.address.gmina` | Gmina |
+        | `entity.address.town` | Miejscowość |
+        | `entity.address.street` | Ulica |
+        | `entity.address.house_number` | Numer nieruchomości |
+        | `entity.address.flat_number` | Numer lokalu |
+        | `entity.address.zip_code` | Kod pocztowy |
+        | `entity.address.post_office` | Poczta |
+        | `proceeding.court_name` | Nazwa sądu |
+        | `proceeding.court_department` | Nazwa wydziału |
+        | `proceeding.signatures` | Sygnatura sprawy |
+        | `proceeding.commissioner_name` | Sędzia komisarz |
+        | `proceeding.commissioner_deputy_name` | Zastępca sędziego komisarza |
+        | `proceeding.administrator_name` | Nadzorca w postępowaniu |
+        | `proceeding.administrator_function` | Funkcja nadzorcy |
+        | `proceeding.administrator_licence_number` | Numer licencji doradcy restrukturyzacyjnego |
+        | `proceeding.administrator_address` | Adres nadzorcy (ulica) |
+        | `proceeding.administrator_zip_code` | Adres nadzorcy (kod pocztowy) |
+        | `proceeding.administrator_town` | Adres nadzorcy (miejscowość) |
+        | `proceeding.administrator_source_url` | Źródło danych nadzorcy |
+        | `order.order_date` | Data wydania postanowienia |
+        | `order.expiration_period` | Okres do działania (w dniach) |
+        | `order.expiration_date` | Koniec okresu do działania |
+        | `msig_entry.chapter` | Rozdział MSiG |
+        | `msig_entry.section` | Sekcja MSiG |
+        | `msig_entry.signature` | Sygnatura ogłoszenia w MSiG |
+        | `msig_entry.issue_date` | Data publikacji ogłoszenia w MSiG |
+        | `msig_entry.yearly_number` | Numer wydania MSiG |
+        | `msig_entry.position_number` | Numer pozycji MSiG |
+        | `msig_entry.url` | Link do ogłoszenia w serwisie imsig.pl |
+        | `krz_entry.chapter` | Rozdział KRZ |
+        | `krz_entry.section` | Sekcja KRZ |
+        | `krz_entry.subsection` | Podsekcja KRZ |
+        | `krz_entry.signature` | Sygnatura ogłoszenia w KRZ |
+        | `krz_entry.issue_date` | Data publikacji ogłoszenia w KRZ |
+        | `krz_entry.url` | Link do ogłoszenia w serwisie KRZ |
+        | `content.text` | Treść ogłoszenia (tekst) |
+        | `content.html` | Treść ogłoszenia (HTML) |
+        | `content.url` | Link do podglądu treści ogłoszenia |</details>
   filter_items_limit:
     title: Filter Items Limit
     type: integer
-    description: Maksymalna liczba identyfikatorów w filtrze
   monitors_available:
     title: Monitors Available
     type: integer
-    description: Maksymalna liczba monitoringów, które użytkownik może utorzyć w ramach
-      obecnego planu
   monitors_used:
     title: Monitors Used
     type: integer
-    description: Liczba utworzonych monitoringów
   monitors_emails_limit:
     title: Monitors Emails Limit
     type: integer
-    description: Maksymalna liczba adresów e-mail przypisanych do pojedynczego monitoringu
   api_key:
     title: Api Key
     type: string
     format: uuid
-    description: Klucz autoryzacji w API
   api_requests_available:
     title: Api Requests Available
     type: integer
-    description: Maksymalna liczba zapytań do API o pojedyncze ogłoszenia, które użytkownik
-      może wykonać w ramach obecnego planu
   api_requests_used:
     title: Api Requests Used
     type: integer
-    description: Liczba wykonanych zapytań do API o pojedyncze ogłoszenia
   monthly_reset_limits:
     title: Monthly Reset Limits
     type: boolean
-    description: Miesięczny reset limitów
   panel_users_limit:
     title: Panel Users Limit
     type: integer
-    description: Maksymalna liczba użytkowników panelu usługi
   panel_users:
     title: Panel Users
     type: array
     items:
       type: string
       format: email
-    description: Adresy e-mail użytkowników usługi
   monitors_filter_required:
     title: Monitors Filter Required
     type: boolean
-    description: Czy przy tworzeniu monitoringu użytkownik musi wybrać filtr?
   available_categories:
     type: array
     items:
@@ -325,7 +297,13 @@ properties:
       - M.1.49
       - M.1.50
       type: string
-    description: Lista możliwych wartości dostępna jest pod adresem [/v2/dicts/announcement-categories](#operation/get_announcement_category_v2_dicts_announcement_categories_get)
+      description: Identyfikator kategorii. Lista możliwych wartości dostępna jest
+        pod adresem [/v2/dicts/announcement-categories](#operation/get_announcement_category_v2_dicts_announcement_categories_get)
+  authorized_vendors:
+    title: Authorized Vendors
+    type: array
+    items:
+      type: string
 example:
   archive_date_from: '2021-04-23'
   current_reports_available: 25
@@ -389,6 +367,13 @@ example:
   - content.text
   - content.html
   - content.url
+  - meta.issue_date
+  - meta.first_update_date
+  - meta.last_update_date
+  - meta.category
+  - meta.is_administrator_data_consistent
+  - meta.is_correction
+  - meta.is_entity_data_consistent
   filter_items_limit: 50
   monitors_available: 5
   monitors_used: 2
