--- a/reference/krs_rdf/paths/params-GET.yaml
+++ b/reference/krs_rdf/paths/params-GET.yaml
@@ -5,21 +5,21 @@ responses:
         schema:
           items:
             properties:
-              api_documents_requests_avaiable:
+              api_documents_requests_available:
                 type: string
-                description: Limit requestów dla zakresu dokumentów finansowych
+                description: Limit zapytań dla zakresu dokumentów finansowych
                 example: 100
               api_documents_requests_used:
                 type: string
-                description: Wykorzystane requesty dla zakresu dokumentów finansowych
+                description: Wykorzystane zapytania dla zakresu dokumentów finansowych
                 example: 100
               api_financial_data_requests_avaiable:
                 type: string
-                description: Limit requestów dla zakresu danych finansowych
+                description: Limit zapytań dla zakresu danych finansowych
                 example: 100
               api_financial_data_requests_used:
                 type: string
-                description: Limit requestów dla zakresu danych finansowych
+                description: Wykorzystane zapytania dla zakresu danych finansowych
                 example: 100
     description: Poprawne zapytanie
   '401':
@@ -82,7 +82,6 @@ operationId: get-params
 x-code-samples:
 - lang: Shell
   source: |-
-    # Wyszukaj dokumenty dla podmiotu z numerem KRS `0000028860`
-    curl https://api.imsig.pl/v1/rdf/params --header \"Authorization: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee\"
+    curl https://api.imsig.pl/v1/rdf/params/ --header \"Authorization: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee\"
 description: Zwraca informacje dotyczące wysokości limitu oraz wykorzystanych zapytań
   dla użytkownika w wykupionym zakresie.
